added parallel T simulation

--- a/extra/visualization_makie.ipynb
+++ b/extra/visualization_makie.ipynb
@@ -93,8 +93,8 @@
     }
    ],
    "source": [
-    "lastQ,angles_values,angles_indexes = randomSearch(P,Q,1e-1,pi/20,-pi/20)\n",
-    "changes = [i for i in 1:length(angles_indexes) if angles_indexes[i] != 0]"
+    "lastQ,angles,diheds = randomSearch(P,Q,1e-1,pi/20,-pi/20)\n",
+    "changes = [i for i in 1:length(diheds) if diheds[i] != 0]"
    ]
   },
   {
