Refactored PolygonalChain2 API

--- a/extra/rotation.ipynb
+++ b/extra/rotation.ipynb
@@ -6775,7 +6775,7 @@
     "P = centerChain(P)\n",
     "lastQ = centerChain(lastQ)\n",
     "OR = optimalRotation(P,lastQ)\n",
-    "P = PolygonalChain2([OR*p for p in P.endpoints])\n",
+    "P = PolygonalChain2([OR*p for p in P.vertices])\n",
     "plotChain!(P,\"red\")\n",
     "plotChain!(Q,\"blue\")\n",
     "plotChain!(lastQ,\"lightblue\")\n",
@@ -6843,7 +6843,7 @@
     "Q = knittingneedle(2)\n",
     "lenghts,bangles,dangles = lengthsAndAngles(Q)\n",
     "P = PolygonalChain(lenghts,bangles,[pi for t in dangles])\n",
-    "P = PolygonalChain2([p for p in P.endpoints])\n",
+    "P = PolygonalChain2([p for p in P.vertices])\n",
     "#plotChain!(Q,\"blue\")"
    ]
   },
