Added flatten and changed structs names

--- a/extra/rotation-checkpoint.ipynb
+++ b/extra/rotation-checkpoint.ipynb
@@ -5666,8 +5666,8 @@
     "points = [p1,p2,p3,p4,p5,p6]\n",
     "#points = [p + 0.05*2*(Point()-(ex+ey+ez)) for p in points]\n",
     "Q = stair(5)\n",
-    "#P = PolygonalChain2([p + 0.05*2*(Point()-(ex+ey+ez)) for p in points])\n",
-    "P = PolygonalChain2(points)\n",
+    "#P = PolygonalNew([p + 0.05*2*(Point()-(ex+ey+ez)) for p in points])\n",
+    "P = PolygonalNew(points)\n",
     "p = plot()\n",
     "plotChain!(P,\"red\")\n",
     "plotChain!(Q,\"blue\")"
@@ -5701,7 +5701,7 @@
     {
      "data": {
       "text/plain": [
-       "(PolygonalChain2(Point[Point(-0.7394097953020259, -0.6732556383807118, -1.0000000000000033), Point(1.1535911115245767e-16, 1.734723475976807e-18, -1.0000000000000029), Point(0.0, 0.0, 0.0), Point(0.7359858566223575, -0.676996911995805, -6.207460297356365e-16), Point(0.059047647516483864, -1.4129189507543478, -0.013168671991056482), Point(0.19477832878277132, -1.5201464983880713, -0.998094778453594)]), [-0.08887869793523855, -0.12267537757821417, 0.0, -0.1018862052156318, 0.0, 0.0, -0.014177883023794385, 0.0, -0.05299715974487261, 0.0  …  0.0, -0.12271815256184773, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.10867015373024012])"
+       "(PolygonalNew(Point[Point(-0.7394097953020259, -0.6732556383807118, -1.0000000000000033), Point(1.1535911115245767e-16, 1.734723475976807e-18, -1.0000000000000029), Point(0.0, 0.0, 0.0), Point(0.7359858566223575, -0.676996911995805, -6.207460297356365e-16), Point(0.059047647516483864, -1.4129189507543478, -0.013168671991056482), Point(0.19477832878277132, -1.5201464983880713, -0.998094778453594)]), [-0.08887869793523855, -0.12267537757821417, 0.0, -0.1018862052156318, 0.0, 0.0, -0.014177883023794385, 0.0, -0.05299715974487261, 0.0  …  0.0, -0.12271815256184773, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, -0.10867015373024012])"
       ]
      },
      "execution_count": 69,
@@ -6762,7 +6762,7 @@
     "P = centerChain(P)\n",
     "lastQ = centerChain(lastQ)\n",
     "OR = optimalRotation(P,lastQ)\n",
-    "P = PolygonalChain2([OR*p for p in P.vertices])\n",
+    "P = PolygonalNew([OR*p for p in P.vertices])\n",
     "plotChain!(P,\"red\")\n",
     "plotChain!(Q,\"blue\")\n",
     "plotChain!(lastQ,\"lightblue\")\n",
@@ -6853,7 +6853,7 @@
     {
      "data": {
       "text/plain": [
-       "PolygonalChain2(Point[Point(0.0, 0.0, 0.0), Point(1.9999999999999998, 0.0, 0.0), Point(1.268692864398084, 0.6820482925847123, 0.0), Point(1.9507411569827964, 1.413355428186628, 1.2246467991473535e-16), Point(1.2194340213808808, 2.0954037207713405, -4.930380657631324e-32), Point(3.217696397208621, 2.178755249559216, 5.207477146175737e-16)])"
+       "PolygonalNew(Point[Point(0.0, 0.0, 0.0), Point(1.9999999999999998, 0.0, 0.0), Point(1.268692864398084, 0.6820482925847123, 0.0), Point(1.9507411569827964, 1.413355428186628, 1.2246467991473535e-16), Point(1.2194340213808808, 2.0954037207713405, -4.930380657631324e-32), Point(3.217696397208621, 2.178755249559216, 5.207477146175737e-16)])"
       ]
      },
      "execution_count": 131,
@@ -6876,13 +6876,13 @@
     "points = [p0,p1,p2,p3,p4,p5]\n",
     "#points = [p + 0.05*2*(Point()-(ex+ey+ez)) for p in points]\n",
     "#Q = stair(5)\n",
-    "#P = PolygonalChain2([p + 0.05*2*(Point()-(ex+ey+ez)) for p in points])\n",
-    "P = PolygonalChain2(points)\n",
+    "#P = PolygonalNew([p + 0.05*2*(Point()-(ex+ey+ez)) for p in points])\n",
+    "P = PolygonalNew(points)\n",
     "#p = plot()\n",
     "#plotChain!(P,\"red\",3)\n",
     "lenghts,bangles,dangles = lengthsAndAngles(P)\n",
-    "Q = PolygonalChain(lenghts,bangles,[pi for t in dangles])\n",
-    "Q = PolygonalChain2([p for p in Q.vertices])\n",
+    "Q = PolygonalOld(lenghts,bangles,[pi for t in dangles])\n",
+    "Q = PolygonalNew([p for p in Q.vertices])\n",
     "#plotChain!(Q,\"blue\")"
    ]
   },
@@ -9382,7 +9382,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "function saveTrajectory(name,P::PolygonalChain2,angles,diheds)\n",
+    "function saveTrajectory(name,P::PolygonalNew,angles,diheds)\n",
     "    ns = length(P)+1\n",
     "    nzeros = Int(ceil(log10(ns+1)))\n",
     "    pnames = [lpad(i,nzeros,'0') for i in 1:ns]\n",
