--- a/extra/rotation.ipynb
+++ b/extra/rotation.ipynb
@@ -5629,8 +5629,8 @@
     "points = [p1,p2,p3,p4,p5,p6]\n",
     "#points = [p + 0.05*2*(Point()-(ex+ey+ez)) for p in points]\n",
     "Q = stair(5)\n",
-    "#P = PolygonalChain2([p + 0.05*2*(Point()-(ex+ey+ez)) for p in points])\n",
-    "P = PolygonalChain2(points)\n",
+    "#P = PolygonalNew([p + 0.05*2*(Point()-(ex+ey+ez)) for p in points])\n",
+    "P = PolygonalNew(points)\n",
     "p = plot()\n",
     "#plotChain!(P,\"red\")\n",
     "#plotChain!(Q,\"blue\")"
@@ -6775,7 +6775,7 @@
     "P = centerChain(P)\n",
     "lastQ = centerChain(lastQ)\n",
     "OR = optimalRotation(P,lastQ)\n",
-    "P = PolygonalChain2([OR*p for p in P.vertices])\n",
+    "P = PolygonalNew([OR*p for p in P.vertices])\n",
     "plotChain!(P,\"red\")\n",
     "plotChain!(Q,\"blue\")\n",
     "plotChain!(lastQ,\"lightblue\")\n",
@@ -6831,7 +6831,7 @@
     {
      "data": {
       "text/plain": [
-       "PolygonalChain2(Point[Point(0.0, 0.0, 0.0), Point(1.9999999999999998, 0.0, 0.0), Point(1.268692864398084, 0.6820482925847123, 0.0), Point(1.9507411569827964, 1.413355428186628, 1.2246467991473535e-16), Point(1.2194340213808808, 2.0954037207713405, -4.930380657631324e-32), Point(3.217696397208621, 2.178755249559216, 5.207477146175737e-16)])"
+       "PolygonalNew(Point[Point(0.0, 0.0, 0.0), Point(1.9999999999999998, 0.0, 0.0), Point(1.268692864398084, 0.6820482925847123, 0.0), Point(1.9507411569827964, 1.413355428186628, 1.2246467991473535e-16), Point(1.2194340213808808, 2.0954037207713405, -4.930380657631324e-32), Point(3.217696397208621, 2.178755249559216, 5.207477146175737e-16)])"
       ]
      },
      "execution_count": 183,
@@ -6842,8 +6842,8 @@
    "source": [
     "Q = knittingneedle(2)\n",
     "lenghts,bangles,dangles = lengthsAndAngles(Q)\n",
-    "P = PolygonalChain(lenghts,bangles,[pi for t in dangles])\n",
-    "P = PolygonalChain2([p for p in P.vertices])\n",
+    "P = PolygonalOld(lenghts,bangles,[pi for t in dangles])\n",
+    "P = PolygonalNew([p for p in P.vertices])\n",
     "#plotChain!(Q,\"blue\")"
    ]
   },
