Corrected name changes

--- a/extra/lsimul.ipynb
+++ b/extra/lsimul.ipynb
@@ -175,7 +175,7 @@
     "        for j in 1:iter\n",
     "            P = stair(5)\n",
     "            Q = knittingneedle(l)\n",
-    "            lastQ, angles, diheds = randomSearch(P,Q,1e-5,angmax,angmin,max_iter=10000)\n",
+    "            lastQ, angles, diheds = localSearchRandom(P,Q,1e-5,angmax,angmin,max_iter=10000)\n",
     "            temp_rmsds[j] = overlapedRmsd(P,lastQ)\n",
     "        end\n",
     "        rmsds_mean[ind] = Statistics.mean(temp_rmsds)\n",
