--- a/extra/rotation-checkpoint.ipynb
+++ b/extra/rotation-checkpoint.ipynb
@@ -4799,7 +4799,7 @@
     {
      "data": {
       "text/plain": [
-       "randomSearch (generic function with 4 methods)"
+       "localSearchRandom (generic function with 4 methods)"
       ]
      },
      "execution_count": 101,
@@ -5681,7 +5681,7 @@
     {
      "data": {
       "text/plain": [
-       "randomSearch (generic function with 4 methods)"
+       "localSearchRandom (generic function with 4 methods)"
       ]
      },
      "execution_count": 68,
@@ -5710,7 +5710,7 @@
     }
    ],
    "source": [
-    "lastQ,angles,diheds = randomSearch(P,Q,1e-1,pi/20,-pi/20)\n",
+    "lastQ,angles,diheds = localSearchRandom(P,Q,1e-1,pi/20,-pi/20)\n",
     "changes = [i for i in 1:length(diheds) if diheds[i] != 0]"
    ]
   },
@@ -6892,7 +6892,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lastQ,angles,diheds = randomSearch(P,Q,1e-1,pi/20,-pi/20)\n",
+    "lastQ,angles,diheds = localSearchRandom(P,Q,1e-1,pi/20,-pi/20)\n",
     "changes = [i for i in 1:length(diheds) if diheds[i] != 0];"
    ]
   },
