--- a/extra/rotation.ipynb
+++ b/extra/rotation.ipynb
@@ -4762,7 +4762,7 @@
     {
      "data": {
       "text/plain": [
-       "randomSearch (generic function with 4 methods)"
+       "localSearchRandom (generic function with 4 methods)"
       ]
      },
      "execution_count": 129,
@@ -5644,7 +5644,7 @@
     {
      "data": {
       "text/plain": [
-       "randomSearch (generic function with 4 methods)"
+       "localSearchRandom (generic function with 4 methods)"
       ]
      },
      "execution_count": 182,
@@ -5723,7 +5723,7 @@
     }
    ],
    "source": [
-    "lastQ,angles,diheds = randomSearch(P,Q,1e-4,pi/10,-pi/10)\n",
+    "lastQ,angles,diheds = localSearchRandom(P,Q,1e-4,pi/10,-pi/10)\n",
     "changes = [i for i in 1:length(diheds) if diheds[i] != 0]"
    ]
   },
@@ -6853,7 +6853,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lastQ,angles,diheds = randomSearch(P,Q,1e-3,pi/10,-pi/10,max_iter=10000)\n",
+    "lastQ,angles,diheds = localSearchRandom(P,Q,1e-3,pi/10,-pi/10,max_iter=10000)\n",
     "changes = [i for i in 1:length(diheds) if diheds[i] != 0];"
    ]
   },
