--- a/extra/visualization_makie.ipynb
+++ b/extra/visualization_makie.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "lastQ,angles,diheds = randomSearch(P,Q,1e-1,pi/20,-pi/20)\n",
+    "lastQ,angles,diheds = localSearchRandom(P,Q,1e-1,pi/20,-pi/20)\n",
     "changes = [i for i in 1:length(diheds) if diheds[i] != 0]"
    ]
   },
