Change to BigFloat for better intersection detection

--- a/extra/lsimul.ipynb
+++ b/extra/lsimul.ipynb
@@ -165,11 +165,11 @@
     }
    ],
    "source": [
-    "function lsimulation(lvals,iter::Integer,angmax::Real=pi/20,angmin::Real=-pi/20)\n",
-    "    n = length(lvals)-1\n",
+    "function lsimulation(ls,iter::Integer,angmax::Real=pi/20,angmin::Real=-pi/20)\n",
+    "    n = length(ls)-1\n",
     "    rmsds_mean = zeros(n+1)\n",
     "    rmsds_error = zeros(n+1)\n",
-    "    for (ind,l) in enumerate(lvals)\n",
+    "    for (ind,l) in enumerate(ls)\n",
     "        temp_rmsds = zeros(iter)\n",
     "        println(ind)\n",
     "        for j in 1:iter\n",
@@ -181,7 +181,7 @@
     "        rmsds_mean[ind] = Statistics.mean(temp_rmsds)\n",
     "        rmsds_error[ind] = Statistics.std(temp_rmsds)\n",
     "    end\n",
-    "    return lvals,rmsds_mean,rmsds_error\n",
+    "    return ls,rmsds_mean,rmsds_error\n",
     "end"
    ]
   },
@@ -192,8 +192,8 @@
    "outputs": [],
    "source": [
     "p = plot()\n",
-    "lvals,rmsds_mean,rmsds_error = lsimulation(LinRange(1.35,1.45,51),10)\n",
-    "scatter!(lvals,rmsds_mean,yerror=rmsds_error,ylabel=\"RMSD sobrepuesto\",xlabel=\"L\",label=false)"
+    "ls,rmsds_mean,rmsds_error = lsimulation(LinRange(1.35,1.45,51),10)\n",
+    "scatter!(ls,rmsds_mean,yerror=rmsds_error,ylabel=\"RMSD sobrepuesto\",xlabel=\"L\",label=false)"
    ]
   },
   {
