Added starting chain as argument

--- a/extra/rotation.ipynb
+++ b/extra/rotation.ipynb
@@ -6840,7 +6840,7 @@
     }
    ],
    "source": [
-    "Q = knittingneedle(2)\n",
+    "Q = knittingNeedle(2)\n",
     "lenghts,bangles,dangles = lengthsAndAngles(Q)\n",
     "P = PolygonalOld(lenghts,bangles,[pi for t in dangles])\n",
     "P = PolygonalNew([p for p in P.vertices])\n",
