--- a/extra/lsimul.ipynb
+++ b/extra/lsimul.ipynb
@@ -174,7 +174,7 @@
     "        println(ind)\n",
     "        for j in 1:iter\n",
     "            P = stair(5)\n",
-    "            Q = knittingneedle(l)\n",
+    "            Q = knittingNeedle(l)\n",
     "            lastQ, angles, diheds = localSearchRandom(P,Q,1e-5,angmax,angmin,max_iter=10000)\n",
     "            temp_rmsds[j] = overlapedRmsd(P,lastQ)\n",
     "        end\n",
