--- a/extra/visualization.ipynb
+++ b/extra/visualization.ipynb
@@ -2525,7 +2525,7 @@
     }
    ],
    "source": [
-    "P = knittingneedle(sqrt(2))\n",
+    "P = knittingNeedle(sqrt(2))\n",
     "p = plot()\n",
     "plotChain!(P,\"red\")"
    ]
