Added internal angle modification option

--- a/extra/rotation.ipynb
+++ b/extra/rotation.ipynb
@@ -414,17 +414,17 @@
     "p = plot(aspect_ratio=1,figsize=(600,600))\n",
     "q1 = 0.2*ex + 0.6*ey\n",
     "q2 = 2*ex + ey\n",
-    "theta = pi/2*rand()\n",
+    "alpha = pi/2*rand()\n",
     "plotLine!(q1,q2,lw=3,label=\"segmento\")\n",
-    "plotRotation!(q1,q2,theta)\n",
+    "plotRotation!(q1,q2,alpha)\n",
     "plotCircle!(e0,norm(q1))\n",
     "plotCircle!(e0,norm(q2))\n",
     "p1 = -0.8*ex+ey\n",
     "p2 = 1.2*ey\n",
     "#plotLine!(p1,p2,lw=3,label=\"segmento\")\n",
     "\n",
-    "#p1 = zrotation(theta/3)*q1\n",
-    "#p2 = zrotation(theta/3)*q2\n",
+    "#p1 = zrotation(alpha/3)*q1\n",
+    "#p2 = zrotation(alpha/3)*q2\n",
     "#vp = p2 - p1\n",
     "#p1 = p1 + 0.6*vp\n",
     "#p2 = p2 + 0.6*vp\n",
@@ -675,17 +675,17 @@
     "p = plot(aspect_ration=1)\n",
     "q1 = 0.3*ex + ey\n",
     "q2 = 0.3*ex - ey\n",
-    "theta = pi/2*rand()\n",
+    "alpha = pi/2*rand()\n",
     "plotLine!(q1,q2,lw=3,label=\"segmento\")\n",
-    "plotRotation!(q1,q2,theta)\n",
+    "plotRotation!(q1,q2,alpha)\n",
     "plotCircle!(e0,norm(q1))\n",
     "plotCircle!(e0,norm(q2))\n",
     "p1 = -0.8*ex+ey\n",
     "p2 = 1.2*ey\n",
     "#plotLine!(p1,p2,lw=3,label=\"segmento\")\n",
     "\n",
-    "#p1 = zrotation(theta/3)*q1\n",
-    "#p2 = zrotation(theta/3)*q2\n",
+    "#p1 = zrotation(alpha/3)*q1\n",
+    "#p2 = zrotation(alpha/3)*q2\n",
     "#vp = p2 - p1\n",
     "#p1 = p1 + 0.6*vp\n",
     "#p2 = p2 + 0.6*vp\n",
@@ -969,14 +969,14 @@
     "p = plot(aspect_ration=1)\n",
     "q1 = 0.5*ex\n",
     "q2 = 1*ex\n",
-    "theta = pi/4+0.05\n",
+    "alpha = pi/4+0.05\n",
     "plotLine!(q1,q2,lw=3,label=\"segmento\")\n",
-    "plotPointRotation!(q1,theta,lw=2)\n",
-    "plotPointRotation!(q2,theta,lw=2)\n",
-    "plotRotation!(q1,q2,theta;lw=0,alpha=0.15)\n",
+    "plotPointRotation!(q1,alpha,lw=2)\n",
+    "plotPointRotation!(q2,alpha,lw=2)\n",
+    "plotRotation!(q1,q2,alpha;lw=0,alpha=0.15)\n",
     "p1 = 0.45*ex + 0.6*ey\n",
     "p2 = 1.1*ex + 0.1*ey\n",
-    "#plotRotation!(p1,p2,-theta;lw=0)\n",
+    "#plotRotation!(p1,p2,-alpha;lw=0)\n",
     "plotLine!(p1,p2,lw=3,label=\"segmento\")\n",
     "plot!(legend=false)\n",
     "xlims!(-0.2,1.1)\n",
@@ -1257,14 +1257,14 @@
     "p = plot(aspect_ration=1)\n",
     "q1 = 0.5*ex\n",
     "q2 = 1*ex\n",
-    "theta = pi/4+0.05\n",
+    "alpha = pi/4+0.05\n",
     "plotLine!(q1,q2,lw=3,label=\"segmento\")\n",
-    "plotPointRotation!(q1,theta,lw=2)\n",
-    "plotPointRotation!(q2,theta,lw=2)\n",
-    "plotRotation!(q1,q2,theta;lw=0,alpha=0.15)\n",
+    "plotPointRotation!(q1,alpha,lw=2)\n",
+    "plotPointRotation!(q2,alpha,lw=2)\n",
+    "plotRotation!(q1,q2,alpha;lw=0,alpha=0.15)\n",
     "p1 = 0.87*ex + 0.4*ey\n",
     "p2 = 0.5*ex + 0.5*ey\n",
-    "#plotRotation!(p1,p2,-theta;lw=0)\n",
+    "#plotRotation!(p1,p2,-alpha;lw=0)\n",
     "plotLine!(p1,p2,lw=3,label=\"segmento\")\n",
     "plot!(legend=false)\n",
     "xlims!(-0.2,1.1)\n",
@@ -1546,19 +1546,19 @@
     "p = plot(aspect_ration=1)\n",
     "q1 = 0.5*ex\n",
     "q2 = 1*ex\n",
-    "theta = pi/4+0.05\n",
+    "alpha = pi/4+0.05\n",
     "plotLine!(q1,q2,lw=3,label=\"segmento\")\n",
-    "plotPointRotation!(q1,theta,lw=2)\n",
-    "plotPointRotation!(q2,theta,lw=2)\n",
-    "plotRotation!(q1,q2,theta;lw=0,alpha=0.15)\n",
+    "plotPointRotation!(q1,alpha,lw=2)\n",
+    "plotPointRotation!(q2,alpha,lw=2)\n",
+    "plotRotation!(q1,q2,alpha;lw=0,alpha=0.15)\n",
     "p1 = 0.3*ex + 0.75*ey\n",
     "p2 = 0.75*ex + 0.25*ey\n",
-    "#plotRotation!(p1,p2,-theta;lw=0)\n",
+    "#plotRotation!(p1,p2,-alpha;lw=0)\n",
     "plotLine!(p1,p2,lw=3,label=\"segmento\")\n",
     "plot!(legend=false)\n",
     "xlims!(-0.2,1.1)\n",
     "ylims!(-0.2,1.1)\n",
-    "mat = zrotation(theta)\n",
+    "mat = zrotation(alpha)\n",
     "q1p = mat*q1\n",
     "q2p = mat*q2\n",
     "ts = xyIntersection(p1,p2,p2-p1,q1p,q2p,q2p-q1p)\n",
@@ -1840,19 +1840,19 @@
     "p = plot(aspect_ration=1)\n",
     "q1 = 0.45*ex + ey\n",
     "q2 = 0.45*ex - ey\n",
-    "theta = 3*pi/4\n",
+    "alpha = 3*pi/4\n",
     "plotLine!(q1,q2,lw=3,label=\"segmento\")\n",
-    "plotPointRotation!(q1,theta,lw=2)\n",
-    "plotPointRotation!(q2,theta,lw=2)\n",
-    "plotRotation!(q1,q2,theta;lw=0,alpha=0.15)\n",
+    "plotPointRotation!(q1,alpha,lw=2)\n",
+    "plotPointRotation!(q2,alpha,lw=2)\n",
+    "plotRotation!(q1,q2,alpha;lw=0,alpha=0.15)\n",
     "p1 = -0.5*ex + 0.5*ey\n",
     "p2 = 0.4*ex + 0.3*ey\n",
-    "#plotRotation!(p1,p2,-theta;lw=0)\n",
+    "#plotRotation!(p1,p2,-alpha;lw=0)\n",
     "plotLine!(p1,p2,lw=3,label=\"segmento\")\n",
     "plot!(legend=false)\n",
     "xlims!(-1.2,1.2)\n",
     "ylims!(-1.2,1.2)\n",
-    "mat = zrotation(theta)\n",
+    "mat = zrotation(alpha)\n",
     "q1p = mat*q1\n",
     "q2p = mat*q2\n",
     "#ts = xyIntersection(p1,p2,p2-p1,q1p,q2p,q2p-q1p)\n",
@@ -2134,19 +2134,19 @@
     "p = plot(aspect_ration=1)\n",
     "q1 = 0.45*ex + ey\n",
     "q2 = 0.45*ex - ey\n",
-    "theta = 3*pi/6\n",
+    "alpha = 3*pi/6\n",
     "plotLine!(q1,q2,lw=3,label=\"segmento\")\n",
-    "plotPointRotation!(q1,theta,lw=2)\n",
-    "plotPointRotation!(q2,theta,lw=2)\n",
-    "plotRotation!(q1,q2,theta;lw=0,alpha=0.15)\n",
+    "plotPointRotation!(q1,alpha,lw=2)\n",
+    "plotPointRotation!(q2,alpha,lw=2)\n",
+    "plotRotation!(q1,q2,alpha;lw=0,alpha=0.15)\n",
     "p1 = e0\n",
     "p2 = 0.9*ex + 0.6*ey\n",
-    "#plotRotation!(p1,p2,-theta;lw=0)\n",
+    "#plotRotation!(p1,p2,-alpha;lw=0)\n",
     "plotLine!(p1,p2,lw=3,label=\"segmento\")\n",
     "plot!(legend=false)\n",
     "xlims!(-1.2,1.2)\n",
     "ylims!(-1.2,1.2)\n",
-    "mat = zrotation(theta)\n",
+    "mat = zrotation(alpha)\n",
     "q1p = mat*q1\n",
     "q2p = mat*q2\n",
     "#ts = xyIntersection(p1,p2,p2-p1,q1p,q2p,q2p-q1p)\n",
@@ -2429,19 +2429,19 @@
     "p = plot(aspect_ration=1)\n",
     "q1 = 0.5*ex\n",
     "q2 = 1*ex\n",
-    "theta = pi/4+0.05\n",
+    "alpha = pi/4+0.05\n",
     "plotLine!(q1,q2,lw=3,label=\"segmento\")\n",
-    "plotPointRotation!(q1,theta,lw=2)\n",
-    "plotPointRotation!(q2,theta,lw=2)\n",
-    "plotRotation!(q1,q2,theta;lw=0,alpha=0.15)\n",
+    "plotPointRotation!(q1,alpha,lw=2)\n",
+    "plotPointRotation!(q2,alpha,lw=2)\n",
+    "plotRotation!(q1,q2,alpha;lw=0,alpha=0.15)\n",
     "p1 = 0.3*ex + 0.75*ey\n",
     "p2 = 0.8*ex - 0.08*ey\n",
-    "#plotRotation!(p1,p2,-theta;lw=0)\n",
+    "#plotRotation!(p1,p2,-alpha;lw=0)\n",
     "plotLine!(p1,p2,lw=3,label=\"segmento\")\n",
     "plot!(legend=false)\n",
     "xlims!(-0.2,1.1)\n",
     "ylims!(-0.2,1.1)\n",
-    "mat = zrotation(theta)\n",
+    "mat = zrotation(alpha)\n",
     "q1p = mat*q1\n",
     "q2p = mat*q2\n",
     "ts = xyIntersection(p1,p2,p2-p1,q1p,q2p,q2p-q1p)\n",
@@ -2468,7 +2468,7 @@
     }
    ],
    "source": [
-    "case3Intersection(p1,p2,p2-p1,q1,q2,q2-q1,theta)"
+    "case3Intersection(p1,p2,p2-p1,q1,q2,q2-q1,alpha)"
    ]
   },
   {
@@ -3346,8 +3346,8 @@
     "points = [p1,p2,p3,p4,p5,p6]\n",
     "#points = [p + 0.05*2*(Point()-(ex+ey+ez)) for p in points]\n",
     "Q = stair(5)\n",
-    "#P = PolygonalNew([p + 0.05*2*(Point()-(ex+ey+ez)) for p in points])\n",
-    "P = PolygonalNew(points)\n",
+    "#P = PolygonalChain([p + 0.05*2*(Point()-(ex+ey+ez)) for p in points])\n",
+    "P = PolygonalChain(points)\n",
     "p = plot()\n",
     "#plotChain!(P,\"red\")\n",
     "#plotChain!(Q,\"blue\")"
@@ -3440,7 +3440,7 @@
     }
    ],
    "source": [
-    "lastQ,angles,diheds = localSearchRandom(P,Q,1e-4,pi/10,-pi/10)\n",
+    "lastQ,angles,diheds = localRandomSearch(P,Q,1e-4,pi/10,-pi/10)\n",
     "changes = [i for i in 1:length(diheds) if diheds[i] != 0]"
    ]
   },
@@ -4492,7 +4492,7 @@
     "P = centerChain(P)\n",
     "lastQ = centerChain(lastQ)\n",
     "OR = optimalRotation(P,lastQ)\n",
-    "P = PolygonalNew([OR*p for p in P.vertices])\n",
+    "P = PolygonalChain([OR*p for p in P.vertices])\n",
     "plotChain!(P,\"red\")\n",
     "plotChain!(Q,\"blue\")\n",
     "plotChain!(lastQ,\"lightblue\")\n",
@@ -4548,7 +4548,7 @@
     {
      "data": {
       "text/plain": [
-       "PolygonalNew(Point[Point(0.0, 0.0, 0.0), Point(1.9999999999999998, 0.0, 0.0), Point(1.268692864398084, 0.6820482925847123, 0.0), Point(1.9507411569827964, 1.413355428186628, 1.2246467991473535e-16), Point(1.2194340213808808, 2.0954037207713405, -4.930380657631324e-32), Point(3.217696397208621, 2.178755249559216, 5.207477146175737e-16)])"
+       "PolygonalChain(Point[Point(0.0, 0.0, 0.0), Point(1.9999999999999998, 0.0, 0.0), Point(1.268692864398084, 0.6820482925847123, 0.0), Point(1.9507411569827964, 1.413355428186628, 1.2246467991473535e-16), Point(1.2194340213808808, 2.0954037207713405, -4.930380657631324e-32), Point(3.217696397208621, 2.178755249559216, 5.207477146175737e-16)])"
       ]
      },
      "execution_count": 183,
@@ -4560,7 +4560,7 @@
     "Q = knittingNeedle(2)\n",
     "lenghts,bangles,dangles = lengthsAndAngles(Q)\n",
     "P = PolygonalOld(lenghts,bangles,[pi for t in dangles])\n",
-    "P = PolygonalNew([p for p in P.vertices])\n",
+    "P = PolygonalChain([p for p in P.vertices])\n",
     "#plotChain!(Q,\"blue\")"
    ]
   },
@@ -4570,7 +4570,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lastQ,angles,diheds = localSearchRandom(P,Q,1e-3,pi/10,-pi/10,max_iter=10000)\n",
+    "lastQ,angles,diheds = localRandomSearch(P,Q,1e-3,pi/10,-pi/10,max_iter=10000)\n",
     "changes = [i for i in 1:length(diheds) if diheds[i] != 0];"
    ]
   },
