Refactored for better variable names

--- a/extra/chainDebugging.ipynb
+++ b/extra/chainDebugging.ipynb
@@ -1286,8 +1286,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "P,Q,lastQ,diheds,angles = readSingleSimulation(joinpath(\"..\",\"outputs\",\"test5\",\"30_04\"))\n",
-    "idxs = [i for i in 1:length(diheds) if diheds[i] != 0 ];"
+    "P,Q,lastQ,ang_idxs,ang_vals = readSingleSimulation(joinpath(\"..\",\"outputs\",\"test5\",\"30_04\"))\n",
+    "idxs = [i for i in 1:length(ang_idxs) if ang_idxs[i] != 0 ];"
    ]
   },
   {
@@ -1301,7 +1301,7 @@
     "newQ = copy(Q)\n",
     "for i in 1:n\n",
     "    val = idxs[i]\n",
-    "    dihedralRotate!(newQ,diheds[val],angles[val])\n",
+    "    dihedralRotate!(newQ,ang_idxs[val],ang_vals[val])\n",
     "end"
    ]
   },
@@ -1323,7 +1323,7 @@
     }
    ],
    "source": [
-    "diheds[idxs[n+1]]"
+    "ang_idxs[idxs[n+1]]"
    ]
   },
   {
@@ -4399,7 +4399,7 @@
    ],
    "source": [
     "p = plot()\n",
-    "newQ = moveBeforeDihedral(newQ,diheds[idxs[n+1]])\n",
+    "newQ = moveBeforeDihedral(newQ,ang_idxs[idxs[n+1]])\n",
     "plotChain!(newQ,\"lightBlue\")\n",
     "display(p)"
    ]
@@ -4483,10 +4483,10 @@
    ],
    "source": [
     "val = idxs[n+1]\n",
-    "println(diheds[val])\n",
-    "println(angles[val])\n",
-    "println(rad2deg(angles[val]))\n",
-    "checkRotationIntersection(newQ,diheds[val],angles[val],debug=true)"
+    "println(ang_idxs[val])\n",
+    "println(ang_vals[val])\n",
+    "println(rad2deg(ang_vals[val]))\n",
+    "checkRotationIntersection(newQ,ang_idxs[val],ang_vals[val],debug=true)"
    ]
   },
   {
@@ -7562,8 +7562,8 @@
    ],
    "source": [
     "p = plot()\n",
-    "dihedralRotate!(newQ,diheds[idxs[n+1]],angles[idxs[n+1]])\n",
-    "newQ = moveBeforeDihedral(newQ,diheds[idxs[n+1]])\n",
+    "dihedralRotate!(newQ,ang_idxs[idxs[n+1]],ang_vals[idxs[n+1]])\n",
+    "newQ = moveBeforeDihedral(newQ,ang_idxs[idxs[n+1]])\n",
     "plotChain!(newQ,\"lightBlue\")\n",
     "display(p)"
    ]
@@ -7584,7 +7584,7 @@
     "dihedAngChange[1,:] = dihedAngs\n",
     "for i in 1:n+3\n",
     "    val = idxs[i]\n",
-    "    dihedralRotate!(newQ,diheds[val],angles[val])\n",
+    "    dihedralRotate!(newQ,ang_idxs[val],ang_vals[val])\n",
     "    lengs,bondAngs,dihedAngs = lengthsAndAngles(newQ)\n",
     "    bondAngChange[i+1,:] = bondAngs\n",
     "    dihedAngChange[i+1,:] = dihedAngs\n",
