--- a/extra/fourKnotRot.ipynb
+++ b/extra/fourKnotRot.ipynb
@@ -16434,15 +16434,15 @@
    "source": [
     "newQ = fourKnot(1.1)\n",
     "stepsize = pi/1000\n",
-    "diheds = [4,3,2,1]\n",
+    "ang_idxs = [4,3,2,1]\n",
     "factor = [-1/4,1/2,1/4,-1/2]\n",
     "ener = []\n",
     "for t in 1:1000\n",
     "    for i in 1:4\n",
-    "        flag = checkRotationIntersection(newQ,diheds[i],factor[i]*stepsize)\n",
+    "        flag = checkRotationIntersection(newQ,ang_idxs[i],factor[i]*stepsize)\n",
     "        push!(ener,demaineEnergy2(newQ))\n",
     "        if !flag\n",
-    "            newQ = dihedralRotate(newQ,diheds[i],factor[i]*stepsize)\n",
+    "            newQ = dihedralRotate(newQ,ang_idxs[i],factor[i]*stepsize)\n",
     "        else\n",
     "            println(t)\n",
     "            println(i)\n",
@@ -32853,15 +32853,15 @@
    "source": [
     "newQ = fourKnot(1.1)\n",
     "stepsize = pi/1000\n",
-    "diheds = [4,3,2,1]\n",
+    "ang_idxs = [4,3,2,1]\n",
     "factor = [-1/4,1/2,1/4,-1/2]\n",
     "ener = []\n",
     "for t in 1:40\n",
     "    for i in 1:4\n",
-    "        flag = checkRotationIntersection(newQ,diheds[i],factor[i]*stepsize)\n",
+    "        flag = checkRotationIntersection(newQ,ang_idxs[i],factor[i]*stepsize)\n",
     "        push!(ener,tangentEnergy(newQ))\n",
     "        if !flag\n",
-    "            newQ = dihedralRotate(newQ,diheds[i],factor[i]*stepsize)\n",
+    "            newQ = dihedralRotate(newQ,ang_idxs[i],factor[i]*stepsize)\n",
     "        else\n",
     "            println(t)\n",
     "            println(i)\n",
