--- a/extra/lsimul.ipynb
+++ b/extra/lsimul.ipynb
@@ -188,7 +188,7 @@
     }
    ],
    "source": [
-    "Q,lastQ,diheds,indexes = readSingleSimulation(\"../outputs/review/01_1\")"
+    "Q,lastQ,ang_idxs,indexes = readSingleSimulation(\"../outputs/review/01_1\")"
    ]
   },
   {
