first successful version

--- a/extra/angleDIst.ipynb
+++ b/extra/angleDIst.ipynb
@@ -128,7 +128,7 @@
    "outputs": [],
    "source": [
     "Q, lastQ, ang_idxs, ang_vals = readSingleSimulation(\"../outputs/help4/07_1\");\n",
-    "lengths,b_angles,d_angles = lengthsAndAngles(Q);"
+    "lengths,b_angles,d_angles = internalCoordinates(Q);"
    ]
   },
   {
