--- a/extra/failedFourKnot.ipynb
+++ b/extra/failedFourKnot.ipynb
@@ -446,7 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lens,bangs,dangs = lengthsAndAngles(fourKnot(1.1));"
+    "lens,bangs,dangs = internalCoordinates(fourKnot(1.1));"
    ]
   },
   {
@@ -2678,7 +2678,7 @@
     }
    ],
    "source": [
-    "lens,bangs,dangs = lengthsAndAngles(ch)"
+    "lens,bangs,dangs = internalCoordinates(ch)"
    ]
   },
   {
