--- a/extra/fourKnotRot.ipynb
+++ b/extra/fourKnotRot.ipynb
@@ -36073,7 +36073,7 @@
     }
    ],
    "source": [
-    "lens,bangs,dangs = lengthsAndAngles(newQ)"
+    "lens,bangs,dangs = internalCoordinates(newQ)"
    ]
   },
   {
