--- a/extra/nonInter.ipynb
+++ b/extra/nonInter.ipynb
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "val = toArray(P)"
+    "val = to2DArray(P)"
    ]
   },
   {
@@ -277,7 +277,7 @@
    "outputs": [],
    "source": [
     "using DelimitedFiles\n",
-    "writedlm(\"../../tesisMaestriaAldo/scripts/nonIter.csv\",toArray(P),',')"
+    "writedlm(\"../../tesisMaestriaAldo/scripts/nonIter.csv\",to2DArray(P),',')"
    ]
   },
   {
