--- a/extra/rotation.ipynb
+++ b/extra/rotation.ipynb
@@ -4558,7 +4558,7 @@
    ],
    "source": [
     "Q = knittingNeedle(2)\n",
-    "lenghts,bangles,dangles = lengthsAndAngles(Q)\n",
+    "lenghts,bangles,dangles = internalCoordinates(Q)\n",
     "P = PolygonalOld(lenghts,bangles,[pi for t in dangles])\n",
     "P = PolygonalChain([p for p in P.vertices])\n",
     "#plotChain!(Q,\"blue\")"
