Refactored to have unifying cmdline interface for simulation

--- a/extra/gradientDebugging.ipynb
+++ b/extra/gradientDebugging.ipynb
@@ -5871,7 +5871,7 @@
     }
    ],
    "source": [
-    "ener_grad_ext = vcat(diff(func,P),zeros(Float64,length(P)))"
+    "ener_grad_ext = vcat(deriv(func,P),zeros(Float64,length(P)))"
    ]
   },
   {
