--- a/extra/helix.ipynb
+++ b/extra/helix.ipynb
@@ -12888,7 +12888,7 @@
     }
    ],
    "source": [
-    "ener_grad = diff(tangentEnergyFrac,Q)"
+    "ener_grad = deriv(tangentEnergyFrac,Q)"
    ]
   },
   {
